FIX 136222 Connected user name now visible

--- a/skins/default/user.scss
+++ b/skins/default/user.scss
@@ -11,6 +11,7 @@ article.user.login > form > ul.actions {
 section.connected.user {
 
 	> a {
+		color: #eee;
 		padding: $action-vertical-padding $action-horizontal-padding;
 	}
 
